@@ -72,6 +72,9 @@ Declaration.
 <li>If <tt>$MAXRCPTS</tt> is set, the number of recipients allowed per
 message is limited to that number.</tt>
 
+<li>Support for <a href="patterns.html">pattern matching</a> in the
+message data.
+
 </ul></p>
 
 <h2>Back Ends</h2>
