@@ -1,0 +1,22 @@
+cat >$tmp/patterns <<EOF
+# comment
+/after
+# comment
+EOF
+
+PATTERNS=$tmp/patterns sfecho <<EOF
+MAIL FROM:<>
+RCPT TO:<nobody>
+DATA
+before
+
+after
+.
+EOF
+
+rm -f $tmp/patterns
+<result>
+250 Sender=''.^M
+250 Recipient='nobody'.^M
+354 End your message with a period.^M
+554 This message contains prohibited content^M
